yc-k8s-ingress-class/app/nginx-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: yc-clusterissuer
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.nginx.<DOMAIN>
      secretName: example-com-secret
  rules:
    - host: app.nginx.<DOMAIN>
      http:
        paths:
          - backend:
              service:
                name: alb-demo-1
                port:
                  number: 80
            path: /app1
            pathType: Prefix
          - backend:
              service:
                name: alb-demo-2
                port:
                  number: 80
            path: /app2
            pathType: Prefix
          - backend:
              service:
                name: alb-demo-2
                port:
                  name: http
            path: /
            pathType: Prefix
